--- a/app/src/main/res/layout/content_privacy_dashboard.xml
+++ b/app/src/main/res/layout/content_privacy_dashboard.xml
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black"
+                android:textColor="@color/almostBlack"
                 android:textIsSelectable="true"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -102,7 +102,7 @@
                 android:paddingEnd="22dp"
                 android:paddingStart="0dp"
                 android:paddingTop="25dp"
-                android:textColor="@color/black"
+                android:textColor="@color/almostBlack"
                 android:textIsSelectable="true"
                 android:textSize="14sp"
                 android:textStyle="normal"
