Allow privacy protection to be toggled on and off

--- a/app/src/main/res/layout/activity_privacy_dashboard.xml
+++ b/app/src/main/res/layout/activity_privacy_dashboard.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.duckduckgo.app.privacydashboard.PrivacyDashboardActivity">
+    tools:context="com.duckduckgo.app.privacymonitor.ui.PrivacyDashboardActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
