--- a/app/src/main/res/layout/content_privacy_dashboard.xml
+++ b/app/src/main/res/layout/content_privacy_dashboard.xml
@@ -26,7 +26,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="com.duckduckgo.app.privacydashboard.PrivacyDashboardActivity"
+        tools:context="com.duckduckgo.app.privacymonitor.ui.PrivacyDashboardActivity"
         tools:showIn="@layout/activity_privacy_dashboard">
 
         <android.support.constraint.ConstraintLayout
@@ -61,6 +61,7 @@
                 tools:text="theatlantic.com" />
 
             <TextView
+                android:id="@+id/heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -68,7 +69,7 @@
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:letterSpacing="0.14"
-                android:text="@string/privacyProtectionState"
+                android:text="@string/privacyProtectionEnabled"
                 android:textColor="@color/warmGrey"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -88,7 +89,7 @@
 
             <ImageView
                 android:id="@+id/httpsIcon"
-                style="@style/dashboardEntryIcon"
+                style="@style/DashboardEntryIcon"
                 android:importantForAccessibility="no"
                 android:src="@drawable/dashboard_https_good"
                 app:layout_constraintBottom_toBottomOf="@id/httpsText"
@@ -96,39 +97,38 @@
 
             <TextView
                 android:id="@+id/httpsText"
-                style="@style/dashboardEntryText"
+                style="@style/DashboardEntryText"
                 android:textIsSelectable="true"
                 app:layout_constraintStart_toEndOf="@id/httpsIcon"
                 tools:text="8 Tracker Networks Blocked" />
 
             <ImageView
                 android:id="@+id/networksIcon"
-                style="@style/dashboardEntryIcon"
+                style="@style/DashboardEntryIcon"
                 android:importantForAccessibility="no"
-                android:src="@drawable/dashboard_networks_blocked"
+                android:src="@drawable/dashboard_networks_good"
                 app:layout_constraintBottom_toBottomOf="@id/networksText"
                 app:layout_constraintTop_toTopOf="@id/networksText" />
 
             <TextView
                 android:id="@+id/networksText"
-                style="@style/dashboardEntryText"
+                style="@style/DashboardEntryText"
                 android:textIsSelectable="true"
                 app:layout_constraintStart_toEndOf="@id/networksIcon"
                 app:layout_constraintTop_toBottomOf="@id/httpsText"
                 tools:text="8 Tracker Networks Blocked" />
 
-
             <ImageView
                 android:id="@+id/majorNetworksIcon"
-                style="@style/dashboardEntryIcon"
+                style="@style/DashboardEntryIcon"
                 android:importantForAccessibility="no"
-                android:src="@drawable/dashboard_major_networks_blocked"
+                android:src="@drawable/dashboard_major_networks_good"
                 app:layout_constraintBottom_toBottomOf="@id/majorNetworksText"
                 app:layout_constraintTop_toTopOf="@id/majorNetworksText" />
 
             <TextView
                 android:id="@+id/majorNetworksText"
-                style="@style/dashboardEntryText"
+                style="@style/DashboardEntryText"
                 android:textIsSelectable="true"
                 app:layout_constraintStart_toEndOf="@id/majorNetworksIcon"
                 app:layout_constraintTop_toBottomOf="@id/networksText"
@@ -137,22 +137,33 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/privacyToggleContainer"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/midGreen"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/review">
 
             <TextView
+                android:id="@+id/privacyToggleText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
-                android:paddingEnd="19dp"
-                android:paddingStart="19dp"
-                android:text="@string/privacyProtectionToggle"
+                android:text="@string/privacyProtectionToggleOn"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/privacyToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:theme="@style/SwitchTheme"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
