Allow privacy protection to be toggled on and off

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="charcoalGrey">#47494c</color>
     <color name="slateGray">#5e6168</color>
     <color name="warmGrey">#939393</color>
+    <color name="warmerGrey">#777777</color>
     <color name="subtleGrey">#f0f0f0</color>
 
     <color name="midGreen">#3fa140</color>
