--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -14,15 +12,19 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="CrashReportingDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert" >
+    <style name="SwitchTheme" parent="Widget.AppCompat.CompoundButton.Switch">
+        <item name="colorControlActivated">@android:color/white</item>
+    </style>
+
+    <style name="CrashReportingDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:padding">4dp</item>
     </style>
 
-    <style name="dashboardEntryText">
+    <style name="DashboardEntryText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-medium</item>
@@ -36,7 +38,7 @@
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="dashboardEntryIcon">
+    <style name="DashboardEntryIcon">
         <item name="android:layout_width">66dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:contentDescription">@string/trackerNetworksContentDescription</item>
