--- a/app/src/main/res/layout/content_privacy_dashboard.xml
+++ b/app/src/main/res/layout/content_privacy_dashboard.xml
@@ -36,13 +36,13 @@
             android:background="@color/subtleGrey">
 
             <ImageView
-                android:id="@+id/gradeImage"
+                android:id="@+id/privacyBanner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/privacyGradeContentDescription"
                 android:paddingBottom="12dp"
                 android:paddingTop="20dp"
-                android:src="@drawable/privacy_banner_unknown"
+                android:src="@drawable/privacygrade_banner_unknown"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
 
@@ -57,7 +57,7 @@
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/gradeImage"
+                app:layout_constraintTop_toBottomOf="@id/privacyBanner"
                 tools:text="theatlantic.com" />
 
             <TextView
