--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,16 +31,18 @@
         <item name="android:paddingBottom">13dp</item>
         <item name="android:paddingTop">13dp</item>
         <item name="android:paddingEnd">22dp</item>
-        <item name="android:paddingStart">0dp</item>
         <item name="android:textColor">@color/almostBlack</item>
-        <item name="android:textIsSelectable">true</item>
+        <item name="android:textIsSelectable">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:clickable">false</item>
     </style>
 
     <style name="DashboardEntryIcon">
         <item name="android:layout_width">66dp</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:clickable">false</item>
         <item name="android:contentDescription">@string/trackerNetworksContentDescription</item>
     </style>
 
